fixing contrast issue

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ nav.top-nav {
     top: 0px;
     right: 0px;
     left: 0px;
-    box-shadow: 0px 4px 4px #36269D;
+    box-shadow: 0px 4px 4px #1E5095;
 }
 
 nav [aria-current=page] {
@@ -74,7 +74,7 @@ nav.top-nav .pulldown-menu li:focus {
 }
 
 .header-link li a, a:visited {
-    color: #1E5095;
+    color: #26187C;
 }
 
 .header-link li a:hover {
